--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0",
-    "yaml-tag": "^1.1.0"
+    "js-yaml": "^4.1.0"
   }
 }
