--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"outDir": "build",
-		"noUnusedParameters": true,
-		"noUnusedLocals": true,
-		"removeComments": true,
-		"sourceMap": true,
-		"strict": true,
-		"target": "es2015",
-		"declaration": true,
-		"skipLibCheck": true
-	},
-	"include": [
-		"lib/**/*.ts"
-	]
+  "compilerOptions": {
+	"module": "commonjs",
+	"outDir": "build",
+	"noUnusedParameters": true,
+	"noUnusedLocals": true,
+	"removeComments": true,
+	"sourceMap": true,
+	"strict": true,
+	"target": "es2015",
+	"declaration": true,
+	"skipLibCheck": true,
+	"resolveJsonModule": true,
+  },
+  "include": [
+	"lib/**/*.ts"
+  ],
 }
